// Copyright 2023 Peridot Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package peridot.tools.mothership.v1;

import "google/api/field_behavior.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

option java_multiple_files = true;
option java_outer_classname = "EntryProto";
option java_package = "org.resf.peridot.tools.mothership.v1";
option go_package = "go.resf.org/peridot/tools/mothership/pb;mothershippb";

// Entry is a single entry in the mothership log.
// This describes the package being archived, which worker archived it,
// when it was archived, if it was in a batch and which OS release value
// the package was pulled from.
message Entry {
  // Output only. Unique ID of the entry.
  // Format: `entries/{entry_id}`
  string name = 1 [(google.api.field_behavior) = OUTPUT_ONLY];

  // Package NEVRA (name-epoch:version-release.arch) of the package being archived.
  string entry_id = 2 [(google.api.field_behavior) = IMMUTABLE];

  // When the package was archived.
  google.protobuf.Timestamp create_time = 3 [(google.api.field_behavior) = REQUIRED];

  // OS release value the package was pulled from.
  string os_release = 4 [(google.api.field_behavior) = REQUIRED];

  // SHA256 of the package.
  // This value is output only as the API server will determine
  // the SHA256 of the package.
  string sha256_sum = 5 [(google.api.field_behavior) = OUTPUT_ONLY];

  // Repository name of the package as in which repository the package was archived from.
  string repository = 6 [(google.api.field_behavior) = REQUIRED];

  // Worker ID of the worker that archived the package.
  // This value is output only as the API server will determine
  // the worker ID of the worker that archived the package based
  // on the authentication token used to make the request.
  // If this field is not set, the package was archived by a
  // user instead of a worker.
  google.protobuf.StringValue worker_id = 7 [(google.api.field_behavior) = OUTPUT_ONLY];

  // Name of the batch the package was archived in.
  // If this field is not set, the package was not archived in a batch.
  google.protobuf.StringValue batch = 8;

  // User email of the user that archived the package.
  // This value is output only as the API server will determine
  // the user email of the user that archived the package based
  // on the authentication token used to make the request.
  // If this field is not set, the package was archived by a
  // worker instead of a user.
  google.protobuf.StringValue user_email = 9 [(google.api.field_behavior) = OUTPUT_ONLY];

  // URI to view commit
  string commit_uri = 10 [(google.api.field_behavior) = OUTPUT_ONLY];

  // Commit hash of the resulting import
  string commit_hash = 11 [(google.api.field_behavior) = OUTPUT_ONLY];
}
